[tool.poetry]
name = "car-recommender"
version = "0.1.0"
description = ""
authors = ["Arseni Rynkevich <rynkevich@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.14"
streamlit = "^1.37.1"
langchain-community = "^0.2.12"
python-dotenv = "^1.0.1"
openai = "^1.42.0"
langchain-openai = "^0.1.22"
chromadb = "^0.5.5"
protobuf = "3.20.3"


[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
